force-app/main/default/objects/Country__c/fields/DateHtarReviewed__c.field-meta.xml
<CustomField>
    <fullName>DateHtarReviewed__c</fullName>
    <description>The date the HTAR risk level for this country was last reviewed</description>
    <label>Date HTAR Reviewed</label>
    <type>Date</type>
</CustomField>