force-app/main/default/objects/Country__c/fields/HtarReasonNotes__c.field-meta.xml
<CustomField>
    <fullName>HtarReasonNotes__c</fullName>
    <description>Reasons for the current HTAR level</description>
    <label>HTAR reason notes</label>
    <type>TextArea</type>
</CustomField>