force-app/main/default/objects/Country__c/fields/HtarRiskLevel__c.field-meta.xml
<CustomField>
    <fullName>HtarRiskLevel__c</fullName>
    <description>Indicates how risky this country has been judged to be</description>
    <inlineHelpText>&quot;Average&quot; indicates a normal level of risk, &quot;A&quot; slightly elevated, &quot;B&quot; moderately elevated, &quot;C&quot; highly elevated, &quot;D&quot; extremely high risk or sanctioned</inlineHelpText>
    <label>HTAR Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
                <isActive>false</isActive>
                <label>Black</label>
            </value>
            <value>
                <fullName>Blue</fullName>
                <isActive>false</isActive>
                <label>Blue</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <isActive>false</isActive>
                <label>Green</label>
            </value>
            <value>
                <fullName>Orange</fullName>
                <isActive>false</isActive>
                <label>Orange</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <isActive>false</isActive>
                <label>Red</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <isActive>false</isActive>
                <label>Yellow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>